[gd_scene load_steps=3 format=2]

[ext_resource path="res://Fonts/Button.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/LevelSelection.gd" type="Script" id=2]

[node name="LevelSelection" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonTemplate" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="ButtonTemplate"]
margin_left = 575.0
margin_top = 79.0
margin_right = 1345.0
margin_bottom = 199.0
rect_min_size = Vector2( 0, 120 )
custom_fonts/font = ExtResource( 1 )
text = "Level 1"

[node name="Bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.509804, 0.509804, 0.509804, 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -385.0
margin_top = 79.0
margin_right = 397.0
margin_bottom = 649.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Levels" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 770.0
rect_min_size = Vector2( 770, 0 )
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottom" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -385.0
margin_top = -310.0
margin_right = 385.0
margin_bottom = -40.0
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Upgrade" type="Button" parent="Bottom"]
margin_right = 770.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 120 )
custom_fonts/font = ExtResource( 1 )
text = "UPGRADE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="Bottom"]
margin_top = 150.0
margin_right = 770.0
margin_bottom = 270.0
rect_min_size = Vector2( 0, 120 )
custom_fonts/font = ExtResource( 1 )
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Bottom/Upgrade" to="." method="_on_Upgrade_pressed"]
[connection signal="pressed" from="Bottom/Back" to="." method="_on_Back_pressed"]
